updated Todo, invocation of delete operator problem fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable(MX
         include/Var.hh
         include/Visitor.hh
         src/Callable.cc
+        src/Decl.cc
         src/Interpreter.cc
         src/Lexer.cc
         src/main.cc
